<resources>
    <string name="app_name">PLayground</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name:</string>
    <string name="welcome">Welcome</string>
    <string name="id">ID:</string>
    <string name="log_in">Log In</string>
    <string name="name_hint">Enter your name</string>
    <string name="id_hint">Enter your ID</string>
</resources>
