<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:id="@+id/welcome"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/tvName"
        android:layout_below="@+id/welcome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etName"
        android:inputType="textPersonName"
        android:layout_alignBaseline="@id/tvName"
        android:layout_toRightOf="@+id/tvName"
        android:layout_toEndOf="@+id/tvName"
        android:hint="@string/name_hint"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:id="@+id/tvId"
        android:layout_below="@+id/tvName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
    />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etID"
        android:inputType="numberDecimal"
        android:layout_alignBaseline="@id/tvId"
        android:layout_toRightOf="@+id/tvName"
        android:layout_toEndOf="@+id/tvName"
        android:hint="@string/id_hint"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:id="@+id/bLogIn"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/welcome"
        android:layout_alignEnd="@+id/welcome"
        android:layout_marginBottom="27dp" />

</RelativeLayout>
